bdr.BDR.scala.error
Erreur de compilation :
BDR:1: error: Missing closing brace `}' assumed here
while (!estSurMessage()){
^BDR:8: error: ')' expected but 'else' found.
 }else if (litMessage() == "I"{
  ^